// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmallTitle Component should match the test snapshot 1`] = `
<Theme>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "borderGrey": "#9B9E9E",
          "buttonGreen": "#009E74",
          "flavorText": "#888B8B",
          "gradientBlue": "#DBE7FE",
          "gradientOrange": "#FFF2EC",
          "highlightGreen": "#009E74",
          "linkText": "#498F80",
          "text": "#282828",
        },
        "fontSizes": Object {
          "large": "3rem",
          "medium": "1.8rem",
          "small": "1rem",
        },
        "fonts": Array [
          "Muli",
          "sans-serif",
        ],
      }
    }
  >
    <_default
      uppercase={true}
    >
      <SmallTitlestyle___default
        uppercase={true}
      >
        <h3
          className="SmallTitlestyle___default-g42rlo-0 dWyeZP"
        />
      </SmallTitlestyle___default>
    </_default>
  </ThemeProvider>
</Theme>
`;

exports[`SmallTitle Component should match the test snapshot for lowercase lettering 1`] = `
<Theme>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "borderGrey": "#9B9E9E",
          "buttonGreen": "#009E74",
          "flavorText": "#888B8B",
          "gradientBlue": "#DBE7FE",
          "gradientOrange": "#FFF2EC",
          "highlightGreen": "#009E74",
          "linkText": "#498F80",
          "text": "#282828",
        },
        "fontSizes": Object {
          "large": "3rem",
          "medium": "1.8rem",
          "small": "1rem",
        },
        "fonts": Array [
          "Muli",
          "sans-serif",
        ],
      }
    }
  >
    <_default
      uppercase={false}
    >
      <SmallTitlestyle___default
        uppercase={false}
      >
        <h3
          className="SmallTitlestyle___default-g42rlo-0 hVAPix"
        />
      </SmallTitlestyle___default>
    </_default>
  </ThemeProvider>
</Theme>
`;
